Fixed spacing issue on Lend card

--- a/packages/fulcrum/src/styles/components/lend-token-selector.scss
+++ b/packages/fulcrum/src/styles/components/lend-token-selector.scss
@@ -48,6 +48,8 @@
         letter-spacing: -0.9px;
         text-align: left;
         color: #ffffff;
+        margin-top: -0.5rem;
+        margin-bottom: 0.5rem;
       }
 
       .token-selector-item__profit-container {
@@ -78,12 +80,14 @@
       }
 
       .token-selector-item__interest-rate-container {
-        display: flex;
+        display: block;
         flex-direction: column;
 
         align-items: flex-start;
 
         height: 2.5rem;
+        margin-top: -0.5rem;
+        margin-bottom: 0.5rem;
 
         .token-selector-item__interest-rate-title {
           font-size: 0.75rem;
